Fix overflow on tags page
Forgot to test for content overflow before commiting last time, fixed
now!

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -326,6 +326,16 @@ main {
     .tags-list {
       font-size: 12px;
 
+      li {
+        display: inline-block;
+
+        a {
+          display: inline-block;
+          max-width: 100px;
+          overflow: hidden;
+        }
+      }
+
       .tag {
         margin: 3px;
       }
